syntax = "proto3";

package pb;
option go_package = ".;fileStorage";

import "google/protobuf/empty.proto";

service FileStorage {
  rpc Upload(stream UploadRequest) returns (UploadResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc BatchDelete(BatchDeleteRequest) returns (google.protobuf.Empty);
}

message UploadRequest {
  oneof file {
    bytes content = 1;
    MetaData metadata = 2;
  }
}

message UploadResponse {
  string url = 1;
}

message MetaData {
  string directory = 1;
  string filename = 2;
}

message DeleteRequest {
  string url = 1;
}

message BatchDeleteRequest {
  repeated string urls = 1;
}
